# Horace

./: Cargo.toml  README.md  dbsetup.sql
migrations/2018-05-17-143152_statistics/: up.sql
migrations/2018-05-17-143157_reminders/: up.sql
src/: command_error.rs  connectionpool.rs  event_handler.rs  main.rs  models.rs  remindme.rs  roles.rs  schema.rs  statistics.rs  util.rs
src/commands/: admin.rs  mod.rs  remindme.rs  roles.rs  statistics.rs
