[package]
name = "horace"
version = "0.1.0"
authors = ["Stian Soltvedt <soltvedt.stian@gmail.com>"]
repository = "https://github.com/stisol/Horace"
license = "MIT"
readme = "README.md"

[dependencies]
serenity = "^0.5.1"
postgres = { version = "^0.15.2", features = ["with-chrono"] }
chrono = "^0.4.1"
log = "^0.4.1"
env_logger = "0.5.6"
